--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "fusion-cli": "^1.9.0",
     "fusion-core": "^1.5.0",
     "fusion-plugin-react-helmet-async": "^1.0.0",
+    "fusion-plugin-react-redux": "^1.0.9",
     "fusion-plugin-react-router": "^1.2.0",
+    "fusion-plugin-redux-action-emitter-enhancer": "^1.0.4",
     "fusion-plugin-styletron-react": "^2.5.2",
     "fusion-react": "^1.2.0",
+    "fusion-redux-action-emitter-enhancer": "^0.1.5",
     "fusion-tokens": "^1.0.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "styletron-react": "^4.3.5"
   },
   "scripts": {
